--- a/src/Components/Advisory/Advisory.css
+++ b/src/Components/Advisory/Advisory.css
@@ -6,7 +6,7 @@
     transition: transform 0.4s ease-in-out;
 }
 .linkedin-icon{
-    color: blue;
+    color: #0A66C2;
 }
 
 .staff-card img:hover {
