--- a/src/Components/Advisory/Advisory.css
+++ b/src/Components/Advisory/Advisory.css
@@ -1,4 +1,4 @@
-.staff-card img{
+.staff-img{
     border-radius: 50%;
     height: 200px;
     width: 200px;
@@ -8,8 +8,17 @@
 .linkedin-icon{
     color: #0A66C2;
 }
+.com-logo{
+    width: 50%;
+    height: 100px;
+}
+.com-logo-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
-.staff-card img:hover {
+.staff-img:hover {
     transform: scale(1.1); /* zoom-in */
   }
 @media (max-width: 768px){
